[B]1.3.8[/B]
- Fixed: MPAA and outline scraping from IMDb due to site changes.

[B]1.3.7[/B]
- Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.2.4) i.e. "fixed: missing imdb ID in search results due to site changes"

[B]1.3.6[/B]
- Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.2.3) i.e. "fixed: IMDb rating" (Probably unnecessary for this scraper but the option is there if needed) 

[B]1.3.5[/B]
- Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.2.2) i.e. "fixed: make sure imdb ID picked up correctly from international sites"

[B]1.3.4[/B]
- Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.2.1) i.e. "fixed: wrong imdb ID detection other certain circumtances"

[B]1.3.3[/B]
- Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.2.0) i.e. "Better USA/International title recognition + make NfoUrl imdb site independent"

[B]1.3.2[/B]
- Fixed: 'No consensus yet.' at Rotten Tomatoes returns no value for correct fallback to IMDb outline

[B]1.3.1[/B]
- Added: Fallback to All Critics if Top Critics values are blank
- Added: Grab critics' consensus from Rotten Tomatoes to 'outline' field

[B]1.3.0[/B]
- Added: Choose certification from different countries (initially available USA, UK and Australia)

[B]1.2.2[/B]
- Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.1.9) i.e. "fixed: actor roles and remove scraping of imdb trailers"

[B]1.2.0[/B]
- Changed: Rotten Tomatoes functions extracted to external scraping library

[B]1.1.0[/B]
- Added: Rotten Tomatoes scraping options (Top/All Critics - TomatoMeter/Average Rating)
- Changed: Settings categorised