@@ -1,3 +1,6 @@
+[B]1.3.9[/B]
+- Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.2.5) i.e. "fixed: IMDb rating, MPAA rating and plot outline after site changes"
+
 [B]1.3.8[/B]
 - Fixed: MPAA and outline scraping from IMDb due to site changes.
 
